force-app/main/default/objects/SalesOrderProductLine__c/fields/ProductAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductAmount__c</fullName>
    <description>Quantity multiplied by Sales Price.</description>
    <formula>round(Quantity__c * SalesPrice__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>