force-app/main/default/objects/SalesOrderProductLine__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <formula>SalesOrder__r.Market__r.Profession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profession</label>
    <type>Text</type>
</CustomField>