force-app/main/default/objects/SalesOrderProductLine__c/fields/Publication_Period__c.field-meta.xml
<CustomField>
    <fullName>Publication_Period__c</fullName>
    <formula>SalesOrder__r.Publication_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>