force-app/main/default/objects/SalesOrderProductLine__c/fields/QuantityInvoicedToDate__c.field-meta.xml
<CustomField>
    <fullName>QuantityInvoicedToDate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total quantity in sent invoices.</inlineHelpText>
    <label>Quantity Invoiced To Date</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>