force-app/main/default/objects/SalesOrderProductLine__c/fields/QuantityPendingInvoice__c.field-meta.xml
<CustomField>
    <fullName>QuantityPendingInvoice__c</fullName>
    <formula>QuantityShippedToDate__c - QuantityInvoicedToDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Pending Invoice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>