force-app/main/default/objects/SalesOrderProductLine__c/fields/QuantityShippedToDate__c.field-meta.xml
<CustomField>
    <fullName>QuantityShippedToDate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Shipped To Date</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>