force-app/main/default/objects/SalesOrderProductLine__c/fields/Recipient_Count__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Recipient Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>