force-app/main/default/objects/SalesOrderProductLine__c/fields/RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>RecordStatus__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <label>Record Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>