force-app/main/default/objects/SalesOrderProductLine__c/fields/Reference_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Reference_Price_Book__c</fullName>
    <description>Reference to parent sales order price book</description>
    <formula>SalesOrder__r.Price_Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Price Book</label>
    <type>Text</type>
</CustomField>