force-app/main/default/objects/SalesOrderProductLine__c/fields/Related_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Related_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Sales Order Product Lines</relationshipLabel>
    <relationshipName>Sales_Order_Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>