force-app/main/default/objects/SalesOrderProductLine__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <label>Order Number</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipName>Sales_Order_Product_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>