force-app/main/default/objects/SalesOrderProductLine__c/fields/Sample_Parent_Order__c.field-meta.xml
<CustomField>
    <fullName>Sample_Parent_Order__c</fullName>
    <formula>SalesOrder__r.Sample_ELM_Copy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Parent Order</label>
    <type>Checkbox</type>
</CustomField>