force-app/main/default/objects/SalesOrderProductLine__c/fields/Sample_Product__c.field-meta.xml
<CustomField>
    <fullName>Sample_Product__c</fullName>
    <formula>Product__r.Sample_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Product</label>
    <type>Checkbox</type>
</CustomField>