force-app/main/default/objects/SalesOrderProductLine__c/fields/ShipmentScheduledQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShipmentScheduledQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Shipment Scheduled Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>