force-app/main/default/objects/SalesOrderProductLine__c/fields/ShipmentUnscheduledQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShipmentUnscheduledQuantity__c</fullName>
    <formula>Quantity__c -  ShipmentScheduledQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment Unscheduled Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>