force-app/main/default/objects/SalesOrderProductLine__c/fields/ShipToCity__c.field-meta.xml
<CustomField>
    <fullName>ShipToCity__c</fullName>
    <formula>ContactShipping__r.MailingCity</formula>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>