force-app/main/default/objects/SalesOrderProductLine__c/fields/ShipToCountry__c.field-meta.xml
<CustomField>
    <fullName>ShipToCountry__c</fullName>
    <formula>ContactShipping__r.MailingCountry</formula>
    <label>Ship To Country</label>
    <type>Text</type>
</CustomField>