force-app/main/default/objects/SalesOrderProductLine__c/fields/ShipToStateProvince__c.field-meta.xml
<CustomField>
    <fullName>ShipToStateProvince__c</fullName>
    <formula>ContactShipping__r.MailingState</formula>
    <label>Ship To State/Province</label>
    <type>Text</type>
</CustomField>