force-app/main/default/objects/SalesOrderProductLine__c/fields/ShipToStreet__c.field-meta.xml
<CustomField>
    <fullName>ShipToStreet__c</fullName>
    <formula>ContactShipping__r.MailingStreet</formula>
    <label>Ship To Street</label>
    <type>Text</type>
</CustomField>