force-app/main/default/objects/SalesOrderProductLine__c/fields/ShipToZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipToZipPostalCode__c</fullName>
    <formula>ContactShipping__r.MailingPostalCode</formula>
    <label>Ship To Zip/Postal Code</label>
    <type>Text</type>
</CustomField>