force-app/main/default/objects/SalesOrderProductLine__c/fields/Social_Network__c.field-meta.xml
<CustomField>
    <fullName>Social_Network__c</fullName>
    <description>Should be filled in during order processing when a press release is sold, contents of this field are transferred to fulfillment on creation via process builder.</description>
    <label>Social Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
                <default>true</default>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
                <isActive>false</isActive>
                <label>Twitter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>