force-app/main/default/objects/SalesOrderProductLine__c/fields/Split_Value__c.field-meta.xml
<CustomField>
    <fullName>Split_Value__c</fullName>
    <formula>(  Actual_Price__c  /  Recipient_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>