force-app/main/default/objects/SalesOrderProductLine__c/fields/State_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Rate__c</fullName>
    <label>State Tax Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>