force-app/main/default/objects/SalesOrderProductLine__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(SalesOrder__r.Status_Picklist__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>