force-app/main/default/objects/SalesOrderProductLine__c/fields/Tax_Amount_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Hidden__c</fullName>
    <description>Hidden field to calculate at rollup-- controlled by trigger</description>
    <label>Tax Amount Hidden</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>