force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxableExcise__c.field-meta.xml
<CustomField>
    <fullName>TaxableExcise__c</fullName>
    <formula>Product__r.TaxableExcise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Excise</label>
    <type>Checkbox</type>
</CustomField>