force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxableSale__c.field-meta.xml
<CustomField>
    <fullName>TaxableSale__c</fullName>
    <formula>Product__r.TaxableSale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Sale</label>
    <type>Checkbox</type>
</CustomField>