force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxableUsage__c.field-meta.xml
<CustomField>
    <fullName>TaxableUsage__c</fullName>
    <formula>Product__r.TaxableUsage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Usage</label>
    <type>Checkbox</type>
</CustomField>