force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxableVAT__c.field-meta.xml
<CustomField>
    <fullName>TaxableVAT__c</fullName>
    <formula>Product__r.TaxableVAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable VAT</label>
    <type>Checkbox</type>
</CustomField>