force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <formula>ROUND(TotalAmount__c *  (TaxExciseRate__c + TaxSalesRate__c + TaxUsageRate__c + TaxVATRate__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>