force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxSalesRate__c.field-meta.xml
<CustomField>
    <fullName>TaxSalesRate__c</fullName>
    <formula>IF(TaxableSale__c, IF(OR(NOT(ISBLANK( State_Tax_Rate__c)), State_Tax_Rate__c &lt;&gt; 0), State_Tax_Rate__c/100,0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Sales Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>