force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxUsageRate__c.field-meta.xml
<CustomField>
    <fullName>TaxUsageRate__c</fullName>
    <formula>IF(TaxableUsage__c, IF(OR(SalesOrder__r.Account__r.ShippingState = &quot;Minnesota&quot;, SalesOrder__r.Account__r.ShippingState = &quot;MN&quot;), $CustomMetadata.Sales_Tax__mdt.Default_MN.Rate__c / 100 ,0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Usage Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>