force-app/main/default/objects/SalesOrderProductLine__c/fields/TaxVATRate__c.field-meta.xml
<CustomField>
    <fullName>TaxVATRate__c</fullName>
    <formula>IF( TaxableVAT__c , IF( ISBLANK( State_Tax_Rate__c ), 0, State_Tax_Rate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>