force-app/main/default/objects/SalesOrderProductLine__c/fields/Team_Check_Fired__c.field-meta.xml
<CustomField>
    <fullName>Team_Check_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a top for the process recurring</description>
    <label>Team Check Fired</label>
    <type>Checkbox</type>
</CustomField>