force-app/main/default/objects/SalesOrderProductLine__c/fields/TotalInvoicedQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoicedQuantity__c</fullName>
    <label>Total Invoiced Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>