force-app/main/default/objects/SalesOrderProductLine__c/fields/TotalPaidQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidQuantity__c</fullName>
    <label>Total Paid Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>