force-app/main/default/objects/SalesOrderProductLine__c/fields/True_List_Price__c.field-meta.xml
<CustomField>
    <fullName>True_List_Price__c</fullName>
    <label>True List Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>