force-app/main/default/objects/SalesOrderProductLine__c/fields/VATRate__c.field-meta.xml
<CustomField>
    <fullName>VATRate__c</fullName>
    <label>VAT/GST Rate</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>