force-app/main/default/objects/SalesOrderProductLine__c/fields/Void_Date__c.field-meta.xml
<CustomField>
    <fullName>Void_Date__c</fullName>
    <label>Adjustment Date</label>
    <type>DateTime</type>
</CustomField>