force-app/main/default/objects/SalesOrderProductLine__c/fields/WebOrderLine__c.field-meta.xml
<CustomField>
    <fullName>WebOrderLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Order Line</label>
    <type>Checkbox</type>
</CustomField>