force-app/main/default/objects/SalesOrderProductLine__c/fields/X0ChargeReason__c.field-meta.xml
<CustomField>
    <fullName>X0ChargeReason__c</fullName>
    <label>$0 Charge Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kit/Bundle</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Loaner</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>