force-app/main/default/objects/SalesOrderProductLine__c/recordTypes/Finance_Layout.recordType-meta.xml
<RecordType>
    <fullName>Finance_Layout</fullName>
    <active>true</active>
    <label>Finance Layout</label>
</RecordType>