force-app/main/default/objects/SalesOrderProductLine__c/recordTypes/Restricted.recordType-meta.xml
<RecordType>
    <fullName>Restricted</fullName>
    <active>true</active>
    <label>Restricted</label>
</RecordType>