force-app/main/default/objects/SalesOrderProductLine__c/validationRules/ActiveProductCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveProductCheck</fullName>
    <active>true</active>
    <description>Ensure the product selected is active.</description>
    <errorConditionFormula>AND(Product__r.IsActive = false, ISNEW())</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>The selected Product is not active.</errorMessage>
</ValidationRule>