force-app/main/default/objects/SalesOrderProductLine__c/validationRules/CancelCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CancelCheck</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>1=2</errorConditionFormula>
    <errorMessage>Deprecated</errorMessage>
</ValidationRule>