force-app/main/default/objects/SalesOrderProductLine__c/validationRules/Cant_Change_Product_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_Product_Fields</fullName>
    <active>true</active>
    <description>Don&amp;apos;t allow changes to the Product field once saved.</description>
    <errorConditionFormula>ischanged(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Once a product line is saved, the Product reference cannot be changed. Please create a new line and delete this one.</errorMessage>
</ValidationRule>