force-app/main/default/objects/SalesOrderProductLine__c/validationRules/Disable_Editing_of_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Editing_of_Required_Fields</fullName>
    <active>true</active>
    <description>Order Number and Date Required are required fields and thus could not be locked on the page layout. Need a way to disable editing those when the order is locked.</description>
    <errorConditionFormula>AND(OR(Order_Status__c == &apos;Released&apos;, Order_Status__c == &apos;Approved&apos;), OR(ISCHANGED( DateRequired__c ), ISCHANGED( SalesOrder__c )))</errorConditionFormula>
    <errorMessage>You cannot edit Date Required or Order Number once the order has been approved.</errorMessage>
</ValidationRule>