force-app/main/default/objects/SalesOrderProductLine__c/validationRules/Integers_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Integers_only</fullName>
    <active>true</active>
    <description>no partial quantities</description>
    <errorConditionFormula>FLOOR( Quantity__c ) &lt;&gt; Quantity__c</errorConditionFormula>
    <errorMessage>No Partial Quantities allowed</errorMessage>
</ValidationRule>