force-app/main/default/objects/SalesOrderProductLine__c/validationRules/KitMemberOrderQuanity.validationRule-meta.xml
<ValidationRule>
    <fullName>KitMemberOrderQuanity</fullName>
    <active>false</active>
    <description>Not Active</description>
    <errorConditionFormula>AND (1=2, ISCHANGED ( Quantity__c ),  (KitBundleLine__c  &lt;&gt; null))</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Kit/Bundle Member Quantity Cannot Be Changed</errorMessage>
</ValidationRule>