force-app/main/default/objects/SalesOrderProductLine__c/validationRules/NegativeUnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>NegativeUnitPrice</fullName>
    <active>false</active>
    <description>Not Active</description>
    <errorConditionFormula>AND(SalesPrice__c &lt; 0, 1=2)</errorConditionFormula>
    <errorDisplayField>SalesPrice__c</errorDisplayField>
    <errorMessage>Unit Price Cannot Be Less Than $0</errorMessage>
</ValidationRule>