force-app/main/default/objects/SalesOrderProductLine__c/validationRules/QuantityMustBeGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>QuantityMustBeGreaterThanZero</fullName>
    <active>false</active>
    <description>Not Active</description>
    <errorConditionFormula>AND(Quantity__c &lt;= 0, 1=2)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Must Have A Quantity &gt; 0</errorMessage>
</ValidationRule>